--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voghera Global Food Showcase</title>
     
-    <link rel="icon" type="image/png" href="Voghera-favicon.png" />
+  <link rel="icon" type="image/png" href="/Voghera-favicon.png?v=99" />
+<link rel="shortcut icon" type="image/png" href="/Voghera-favicon.png?v=99" />
     
   </head>
 
